<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="et_amount">amount</string>
    <string name="tx_20">20%</string>
    <string name="tx_10">10%</string>
    <string name="tx_30">30%</string>
    <string name="tx_tip">Tip is ...</string>

</resources>
